--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.13.0
-tensorflow==2.12.0
-Pillow==9.4.0
-numpy==1.23.0
+streamlit==0.87.0
+numpy==1.21.2
+Pillow==8.3.2
+joblib==1.0.1
+requests==2.26.0
